--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-docopt==0.6.2
-pandas==1.2.2
-numpy==1.21.4
-pyarrow==6.0.1
-requests==2.25.1
-tqdm==4.61.2
+docopt>=0.6.2
+pandas>=1.2.2
+numpy>=1.21.4
+pyarrow>=6.0.1
+requests>=2.25.1
+tqdm>=4.61.2
