--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ tqdm = ">=4.61.2"
 pandas-stubs = ">=1.2.0.39"
 mypy = "^1.2.0"
 [tool.poetry.scripts]
-poetry = "poetry.console.application:opensignals/__main__.py"
+opensignals = "opensignals.__main__:main"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
